fix: fixing warnings and removing deprecated URL